# opal-gfx

./: .gitignore  Cargo.toml  README.md
examples/: drag_drop.rs  external_layer.rs  focus_cycle.rs  glass_grid.rs  glass_over_layer.rs  glass_over_scroll.rs  hello_window.rs  layer_skip.rs  layering.rs  lazy_list.rs  lazy_list_expand.rs  lazy_scroll_skip.rs  modal.rs  routes.rs  scroll_list.rs  scroll_skip.rs  text_input.rs
examples/common/: components.rs  image.rs  mod.rs
src/: anim.rs  app.rs  automation.rs  editor.rs  event.rs  frame_sink.rs  input.rs  layer.rs  layout.rs  lazy_list.rs  lib.rs  node.rs  reactive.rs  scene.rs  signal.rs  svg.rs  text.rs  uploader.rs
src/gpu/: context.rs  glyph_atlas.rs  image_atlas.rs  instance.rs  layer.rs  mod.rs  pipeline.rs  timing.rs
src/gpu/shaders/: composite.wgsl  shape.wgsl
