[package]
name = "frostify-gfx"
version = "0.0.0"
edition = "2024"
description = "Reactive GPU UI rendering library"
license = "MIT OR Apache-2.0"

[features]
# Debug-only scripted-input + screenshot harness (REMOVABLE before ship).
# Pulls in `src/automation.rs` + the `#[cfg(feature = "automation")]`
# blocks in `app.rs`. Off by default — never compiled into a normal build.
automation = []

[dependencies]
wgpu = { version = "29.0.1", features = ["noop"] }
winit = "0.30.13"
bytemuck = { version = "1.25.0", features = ["derive"] }
pollster = "0.4"
log = "0.4"
env_logger = "0.11.10"
png = "0.18.1"
cosmic-text = "0.19.0"
etagere = "0.3.0"
resvg = "0.45"
tiny-skia = "0.11"
arboard = "3"

[[example]]
name = "hello_window"
path = "examples/hello_window.rs"

[[example]]
name = "layering"
path = "examples/layering.rs"

[[example]]
name = "glass_grid"
path = "examples/glass_grid.rs"

[[example]]
name = "routes"
path = "examples/routes.rs"

[[example]]
name = "text_input"
path = "examples/text_input.rs"

[[example]]
name = "lazy_list"
path = "examples/lazy_list.rs"

[[example]]
name = "lazy_list_expand"
path = "examples/lazy_list_expand.rs"

[[example]]
name = "focus_cycle"
path = "examples/focus_cycle.rs"

[[example]]
name = "modal"
path = "examples/modal.rs"

[[example]]
name = "drag_drop"
path = "examples/drag_drop.rs"
